# MaAlejaPizaSar-code--MLQ-Multilevel-Queue-Scheduling-Parcial-No.-1_SO

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  gitignore  mlq_scheduler
include/: FileManager.h  MLQScheduler.h  Metrics.h  PriorityScheduler.h  Process.h  RoundRobinScheduler.h  Scheduler.h
input/: mlq_test.txt
output/: mlq001_result.txt  mlq002_result.txt  mlq003_result.txt  mlq005_result.txt  mlq006_result.txt  mlq007_result.txt  mlq010_result.txt  mlq014_result.txt  mlq019_result.txt  mlq021_result.txt  mlq025_result.txt  mlq026_result.txt
src/: FileManager.cpp  MLQScheduler.cpp  Metrics.cpp  PriorityScheduler.cpp  Process.cpp  RoundRobinScheduler.cpp  Scheduler.cpp  main.cpp
